environment and template fixes
Signed-off-by: Micah Pegman <mpegman@octolabs.io>

--- a/taegis_magic/templates/template.ipynb
+++ b/taegis_magic/templates/template.ipynb
@@ -110,7 +110,7 @@
     "        alerts.pipe(inflate_raw_events)\n",
     "        .pipe(convert_alert_timestamps)\n",
     "        .pipe(severity_rounded_and_category)\n",
-    "        .pipe(normalize_creator_name)\n",
+    "        .pipe(normalize_creator_name, region=REGION)\n",
     "    )"
    ]
   },
@@ -138,7 +138,7 @@
     "            \"metadata.title\",\n",
     "            \"status\",\n",
     "            \"taegis_magic.severity_category\",\n",
-    "            \"event_data.event_name\",\n",
+    "            \"event_data.resource_id\",\n",
     "        ]\n",
     "    ].value_counts()"
    ]
