--- a/docs/jupyter/notebooks/assets.ipynb
+++ b/docs/jupyter/notebooks/assets.ipynb
@@ -187,8 +187,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "huntr311",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
