--- a/docs/jupyter/notebooks/ContextAutomation.ipynb
+++ b/docs/jupyter/notebooks/ContextAutomation.ipynb
@@ -88,7 +88,7 @@
     "].reset_index(drop=True)\n",
     "entities_df[\n",
     "    [\n",
-    "        \"tenant_id\",\n",
+    "        \"tenant.id\",\n",
     "        \"metadata.title\",\n",
     "        \"taegis_magic.entities.field\",\n",
     "        \"taegis_magic.entities.value\",\n",
@@ -189,7 +189,7 @@
     "        entity_queries[entity][query] = entity_queries[entity][query].pipe(\n",
     "            add_threat_intel,\n",
     "            correlations=[get_ti_pubs],\n",
-    "            tenant_id=TENANT,\n",
+    "            tenant.id=TENANT,\n",
     "            region=REGION,\n",
     "        )"
    ]
