--- a/docs/jupyter/notebooks/assets.ipynb
+++ b/docs/jupyter/notebooks/assets.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "This pandas pipe function will work when there are the following columns in the DataFrame:\n",
     "- A column name that contains `host_id`\n",
-    "- A column name that contains `tenant.id` (or `tenant.id`)\n",
+    "- A column name that contains `tenant.id`\n",
     "- The region/environment the lookups are taking place"
    ]
   },
