documentation, formatting and help menu update
Signed-off-by: Micah Pegman <mpegman@octolabs.io>

--- a/docs/jupyter/notebooks/Alerts.ipynb
+++ b/docs/jupyter/notebooks/Alerts.ipynb
@@ -76,16 +76,18 @@
    "source": [
     "convert_timestamps = alerts.pipe(convert_alert_timestamps).pipe(inflate_raw_events)\n",
     "\n",
-    "convert_timestamps[[\n",
-    "    'metadata.created_at.seconds',\n",
-    "    'taegis_magic.metadata.created_at.seconds',\n",
-    "    'metadata.inserted_at.seconds',\n",
-    "    'taegis_magic.metadata.inserted_at.seconds',\n",
-    "    'metadata.began_at.seconds',\n",
-    "    'taegis_magic.metadata.began_at.seconds',\n",
-    "    'metadata.ended_at.seconds',\n",
-    "    'taegis_magic.metadata.ended_at.seconds',\n",
-    "]]"
+    "convert_timestamps[\n",
+    "    [\n",
+    "        \"metadata.created_at.seconds\",\n",
+    "        \"taegis_magic.metadata.created_at.seconds\",\n",
+    "        \"metadata.inserted_at.seconds\",\n",
+    "        \"taegis_magic.metadata.inserted_at.seconds\",\n",
+    "        \"metadata.began_at.seconds\",\n",
+    "        \"taegis_magic.metadata.began_at.seconds\",\n",
+    "        \"metadata.ended_at.seconds\",\n",
+    "        \"taegis_magic.metadata.ended_at.seconds\",\n",
+    "    ]\n",
+    "]"
    ]
   },
   {
