--- a/docs/jupyter/notebooks/Assets.ipynb
+++ b/docs/jupyter/notebooks/Assets.ipynb
@@ -79,16 +79,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inflated_alerts = (\n",
-    "    alerts_df\n",
-    "    .pipe(inflate_raw_events)\n",
-    ")\n",
+    "inflated_alerts = alerts_df.pipe(inflate_raw_events)\n",
     "\n",
-    "inflated_alerts.head(30)[[\n",
-    "    'metadata.title',\n",
-    "    'sensor_types',\n",
-    "    'event_data.host_id'\n",
-    "]]"
+    "inflated_alerts.head(30)[[\"metadata.title\", \"sensor_types\", \"event_data.host_id\"]]"
    ]
   },
   {
@@ -97,10 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alerts_with_asset_info = (\n",
-    "    inflated_alerts\n",
-    "    .pipe(lookup_assets, env='charlie')\n",
-    ")"
+    "alerts_with_asset_info = inflated_alerts.pipe(lookup_assets, env=\"charlie\")"
    ]
   },
   {
@@ -110,13 +100,13 @@
    "outputs": [],
    "source": [
     "(\n",
-    "    alerts_with_asset_info\n",
-    "    .drop_duplicates('asset_info.hostname')\n",
-    "    [[\n",
-    "        'metadata.title',\n",
-    "        'sensor_types',\n",
-    "        'asset_info.hostname',\n",
-    "    ]]\n",
+    "    alerts_with_asset_info.drop_duplicates(\"asset_info.hostname\")[\n",
+    "        [\n",
+    "            \"metadata.title\",\n",
+    "            \"sensor_types\",\n",
+    "            \"asset_info.hostname\",\n",
+    "        ]\n",
+    "    ]\n",
     ")"
    ]
   },
@@ -148,14 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    events_df\n",
-    "    [[\n",
-    "        'enrichSummary',\n",
-    "        'host_id',\n",
-    "        'tenant_id'\n",
-    "    ]]\n",
-    ")"
+    "(events_df[[\"enrichSummary\", \"host_id\", \"tenant_id\"]])"
    ]
   },
   {
@@ -164,10 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "events_with_asset_info = (\n",
-    "    events_df\n",
-    "    .pipe(lookup_assets, env='charlie')    \n",
-    ")"
+    "events_with_asset_info = events_df.pipe(lookup_assets, env=\"charlie\")"
    ]
   },
   {
@@ -176,13 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    events_with_asset_info\n",
-    "    [[\n",
-    "        'enrichSummary',\n",
-    "        'asset_info.hostname'\n",
-    "    ]]\n",
-    ")"
+    "(events_with_asset_info[[\"enrichSummary\", \"asset_info.hostname\"]])"
    ]
   }
  ],
