--- a/docs/jupyter/notebooks/Audits.ipynb
+++ b/docs/jupyter/notebooks/Audits.ipynb
@@ -72,11 +72,13 @@
    },
    "outputs": [],
    "source": [
-    "investigation_update_diffs[[\n",
-    "    column\n",
-    "    for column in investigation_update_diffs.columns\n",
-    "    if column.startswith(\"taegis_magic.diff.\")\n",
-    "]]"
+    "investigation_update_diffs[\n",
+    "    [\n",
+    "        column\n",
+    "        for column in investigation_update_diffs.columns\n",
+    "        if column.startswith(\"taegis_magic.diff.\")\n",
+    "    ]\n",
+    "]"
    ]
   },
   {
