--- a/examples/investigation create.ipynb
+++ b/examples/investigation create.ipynb
@@ -80,7 +80,9 @@
    },
    "outputs": [],
    "source": [
-    "alerts_evidence = alerts_df[alerts_df[\"metadata.title\"]==\"Suspicious AWS Account Enumeration\"].head()"
+    "alerts_evidence = alerts_df[\n",
+    "    alerts_df[\"metadata.title\"] == \"Suspicious AWS Account Enumeration\"\n",
+    "].head()"
    ]
   },
   {
@@ -214,6 +216,7 @@
    "outputs": [],
    "source": [
     "from taegis_sdk_python import GraphQLService\n",
+    "\n",
     "service = GraphQLService()\n",
     "user = service.users.query.current_tdruser()\n",
     "assignee_id = user.user_id\n",
