--- a/taegis_magic/templates/template.ipynb
+++ b/taegis_magic/templates/template.ipynb
@@ -52,7 +52,12 @@
    "source": [
     "%load_ext taegis_magic\n",
     "\n",
-    "from taegis_magic.pandas.alerts import inflate_raw_events, convert_alert_timestamps, severity_rounded_and_category, normalize_creator_name\n",
+    "from taegis_magic.pandas.alerts import (\n",
+    "    inflate_raw_events,\n",
+    "    convert_alert_timestamps,\n",
+    "    severity_rounded_and_category,\n",
+    "    normalize_creator_name,\n",
+    ")\n",
     "from taegis_magic.pandas.events import convert_event_timestamps"
    ]
   },
