--- a/examples/investigaion remove.ipynb
+++ b/examples/investigaion remove.ipynb
@@ -40,7 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evidence = investigations_df.pipe(inflate_evidence).pipe(lookup_evidence, region='charlie')\n",
+    "evidence = investigations_df.pipe(inflate_evidence).pipe(\n",
+    "    lookup_evidence, region=\"charlie\"\n",
+    ")\n",
     "evidence"
    ]
   },
